feat(bitvm2): proxy state root verification
